--- a/auth/package.json
+++ b/auth/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "auth": "file:",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
