FT: auth login and register finished.

--- a/dev-databases/docker-compose.yaml
+++ b/dev-databases/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: '3.8'
 
 services:
-  user-db:
+  auth-db:
     image: mysql:latest
-    container_name: user_db
+    container_name: auth_schema
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: user_db
+      MYSQL_DATABASE: auth_db
     ports:
       - "3400:3306"
     volumes:
-      - ./user_schema.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./auth_schema.sql:/docker-entrypoint-initdb.d/init.sql
