--- a/auth/package.json
+++ b/auth/package.json
@@ -13,7 +13,10 @@
   "description": "",
   "dependencies": {
     "auth": "file:",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
