--- a/gateway/package.json
+++ b/gateway/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "auth": "file:",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
